--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@ body {
     border: 1px solid black;
     display: flex;
     align-items: center;
-    padding: 7px;
+    padding: 9px 10px 9px 7px;
     height: 50px;
     width: 125px;
 }
